--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
+astroid==2.8.4
+cycler==0.11.0
+isort==5.10.0
+kiwisolver==1.3.1
+lazy-object-proxy==1.6.0
 matplotlib==3.3.4
+mccabe==0.6.1
+numpy==1.19.5
+Pillow==8.4.0
+platformdirs==2.4.0
 pylint==2.11.1
+pyparsing==3.0.5
 PyQt5==5.15.6
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
+python-dateutil==2.8.2
+six==1.16.0
+toml==0.10.2
+typed-ast==1.4.3
+typing-extensions==3.10.0.2
+wrapt==1.13.3
